--- a/src/data/grammar/mtg/mtg-sets.yaml
+++ b/src/data/grammar/mtg/mtg-sets.yaml
@@ -97,27 +97,26 @@
     "#teaserCardSet#"
   ],
   "recentCardSet": [
+    "Theros: Beyond Death",
+    "Throne of Eldraine",
     "War of the Spark",
     "Dominaria",
     "Core 2020",    
     "Commander 2019",
-    "Ultimate Masters",
-    "[_otherSet:Signature Spellbook#colon# Jace,Global Series#colon# Jiang Yanggu & Mu Yanling]#_otherSet#"
+    "Modern Horizons",
+    "[_otherSet:Mystery Booster]#_otherSet#"
   ],
   "standardCardSet": [
-    "War of the Spark",    
+    "Theros: Beyond Death",
+    "Throne of Eldraine",    
+    "War of the Spark",
     "Guilds of Ravnica",
-    "Core 2019",
-    "Dominaria",
-    "Ixalan",
-    "Rivals of Ixalan"
+    "Core 2020",
   ],
   "teaserCardSet": [
-    "Throne of Eldraine",
-    "Throne of Eldraine",
-    "Theros: Beyond Death",
     "[_tSet:Ikoria,Ikoria#colon# Lair of Behemoths]#_tSet#",
     "Zendikar Rising",
+    "Unsanctioned",
     "Core Set [_year:#CONTENT.randomFutureYear(2)#]#_year#",
     "Commander [_year:#CONTENT.randomFutureYear(2)#]#_year#",
     "#codename#",
@@ -145,7 +144,7 @@
     "#beings# #verbIntransitiveGerund#",
     "[#randomLegendaryCreature#][_legend:#_cardName#,#_legendName#][_signatory:#character#,#_legend#]Signature Spellbook: #_signatory#",
     "[_time:Hour,Day,Age,Dawn]#_time# of #abstractNoun#",
-    "[_mastery:#format#,#adj#]#_mastery# masters [_year:,2018,2018,2019]#_year#",
+    "[_mastery:#format#,#adj#]#_mastery# masters [_][_year:,2020,2021,2019]#_year#",
     "[_desc:#adj#,#massNoun#,#creatureTypes#]#_desc.capitalizeAll# #omenOrEventNoun#",
     "[_desc:#adj#,#massNoun#,#creatureTypes#]#_desc.capitalizeAll# #fableLocationNoun#",
     "[_setting:Theater of,Curse of][_adjOrSetting:#adj#,#_setting#]#_adjOrSetting# #abstractNoun#",
