--- a/src/data/grammar/mtg/mtg-sets.yaml
+++ b/src/data/grammar/mtg/mtg-sets.yaml
@@ -102,7 +102,7 @@
     "War of the Spark",
     "Dominaria",
     "Core 2020",    
-    "Commander 2019",
+    "Commander 2020",
     "Modern Horizons",
     "[_otherSet:Mystery Booster]#_otherSet#"
   ],
@@ -126,9 +126,9 @@
       "[_futureSet:Equestrian,Fencing,Golf]“#_futureSet#”"  
   ],
   "novelCardSetName": [
-    "#planeBasedSet.capitalizeAll#",
-    "#miscNovelCardSetName.capitalizeAll#",
-    "#miscNovelCardSetName.capitalizeAll#"
+    "#planeBasedSet.titleCaps#",
+    "#miscNovelCardSetName.titleCaps#",
+    "#miscNovelCardSetName.titleCaps#"
   ],
 
   "fakeCardSetName": [
@@ -136,7 +136,9 @@
   	"Endless Sands"
   ],
 
-  "miscNovelCardSetName": [
+  "miscNovelCardSetName": "#_miscNovelCardSetName.titleCaps#",
+
+  "_miscNovelCardSetName": [
     "#collectiveActionOrRealm# of the #beings#",
     "#characterClass.s# of [_prefix:#creatureTypes#,#characterClass#]#_prefix##shortRealmSuffix#",
     "#characterClass.s# of #creatureTypes#[_place:#shortRealmSuffix#,#longRealmSuffix#]#_place#",
@@ -144,17 +146,18 @@
     "#beings# #verbIntransitiveGerund#",
     "[#randomLegendaryCreature#][_legend:#_cardName#,#_legendName#][_signatory:#character#,#_legend#]Signature Spellbook: #_signatory#",
     "[_time:Hour,Day,Age,Dawn]#_time# of #abstractNoun#",
-    "[_mastery:#format#,#adj#]#_mastery# masters [_][_year:,2020,2021,2019]#_year#",
-    "[_desc:#adj#,#massNoun#,#creatureTypes#]#_desc.capitalizeAll# #omenOrEventNoun#",
-    "[_desc:#adj#,#massNoun#,#creatureTypes#]#_desc.capitalizeAll# #fableLocationNoun#",
+    "[_mastery:#format#,#adj#]#_mastery# masters [_yearLastDigit:#num2-9#][_year:,2020,2021,202#_yearLastDigit#]#_year#",
+    "[_desc:#adj#,#massNoun#,#creatureTypes#]#_desc.titleCaps# #omenOrEventNoun#",
+    "[_desc:#adj#,#massNoun#,#creatureTypes#]#_desc.titleCaps# #fableLocationNoun#",
     "[_setting:Theater of,Curse of][_adjOrSetting:#adj#,#_setting#]#_adjOrSetting# #abstractNoun#",
-    "[_what:#emotion#,#bodypart#][_character:#character#,#planeswalkerFirstName#][_setname:#_character#'s #_what#,#_character#'s #_what#,#collectiveActionOrRealm# of #character#]#_setname#"
+    "[_what:#emotion#,#bodypart#][_character:#character#,#planeswalkerFirstName#][_setname:#_character#'s #_what#,#_character#'s #_what#,#collectiveActionOrRealm# of #character#]#_setname#",
+    "Un#verbStrictlyTransitivePastTense#"
   ],
 
   "realm": [
     "[_prefix:#creatureTypes#,#characterClass#]#_prefix##shortRealmSuffix#",
     "#creatureTypes#[_place:#shortRealmSuffix#,#longRealmSuffix#]#_place#",
-    "[_desc:#adj#,#massNoun#,#creatureTypes#]#_desc.capitalizeAll# #fableLocationNoun#"
+    "[_desc:#adj#,#massNoun#,#creatureTypes#]#_desc.titleCaps# #fableLocationNoun#"
   ],
 
   "shortRealmSuffix": [
@@ -199,7 +202,9 @@
     "#plane# #cardSetSuffix#",
     "#plane# #cardSetSuffix#",
     "#plane# #omenOrEventNoun#",
-    "#plane# #verbIntransitiveGerund#"
+    "#plane# #verbIntransitiveGerund#",
+    "#plane#: #placeNoun.titleCaps# of #abstractNounMassNounOrEmotion.titleCaps#",
+    "#obscurePlane#: #placeNoun.titleCaps# of #abstractNounMassNounOrEmotion.titleCaps#"
   ],
 
   "omenOrEventNoun": [
