--- a/src/data/grammar/mtg/community/tournament-hijinks.yaml
+++ b/src/data/grammar/mtg/community/tournament-hijinks.yaml
@@ -103,7 +103,7 @@ tshirtPhrase:
 dumbScenario: "[_their:#their#][_them:#them#][_they:#they#]#_dumbScenario#"
 
 _dumbScenario:
-- "[_lobby:push #officialEntity# to,ask #officialEntity# to,plead with #officialEntity# to,try to,attempt to]#_lobby# [_goal:bring back damage on the stack,bring back mana burn,make mana weaving legal again,bring back the planeswalker redirection rule,return to using “he or she” in rules text,bring back mana burn]#_goal#"
+- "[_lobby:push #officialEntity# to,ask #officialEntity# to,plead with #officialEntity# to,try to,attempt to]#_lobby# [_goal:bring back damage on the stack,bring back mana burn,make mana weaving legal again,bring back the planeswalker redirection rule,return to the inclusion real-world references in flavor text,bring back mana burn]#_goal#"
 - 'join the development team of #_their# fantasy [_game:CCG,TCG,roleplaying game,miniatures game,tabletop game] [_gameName:"#creatureTypes# #placeNoun#","Zoxelorn
   #count#","#abstractMassOrPluralNounOrEmotion# #_fantasyCharacterClass#","#itemNoun# #_scenarioNoun#","#characterClass# #groupNoun##colon# #tabletopGameSuffix#","#creatureTypes# #_scenarioNoun##colon# the #abstractNoun#", "#characterClass.s# of #locationRealOrFantasy#"]#_game# #_gameName.capitalizeAll#'
 - "[_join:join,donate to,participate in,help launch][_initiative:initiative,campaign,drive,effort,project,raffle,fundraiser]#_join# #_their# \"#charity.capitalizeAll#\" #_initiative#"
@@ -112,7 +112,7 @@ _dumbScenario:
 - "participate in #_their# #format# invitational tournament"
 - "covertly collect information on #pro# in order to [_rule:learn #their# shuffling routine,learn what #they# look#s# like naked,know what hate cards to board
   in against #their# #deck# deck,destroy their reputation,understand why #they# think#s# #gameConcept# #_is# so important]#_rule#"
-- "[_infiltrate:infiltrate,travel to,storm,stage a rally at]#_infiltrate# WOTC headquarters and [_topic:#informalRule#,the NWO,the #constructedFormat# banlist,declining print quality,the judge program,the Arena economy][_act:destroy the reserved list,trash MaRo's desk,pee in the Mana Pool,steal the Shivan Dragon statue,fall asleep in The Pit,petition for the construction of #character.a# statue,confront #officialEntityPerson# about #_topic#,steal the #teaserCardSet# godbook]#_act#"
+- "[_infiltrate:infiltrate,travel to,break into,sneak into,stage a rally at]#_infiltrate# WOTC headquarters and [_topic:#informalRule#,the NWO,the #constructedFormat# banlist,declining print quality,the judge program,the Arena economy][_act:destroy the reserved list,trash MaRo's desk,pee in the Mana Pool,steal the Shivan Dragon statue,fall asleep in The Pit,petition for the construction of #character.a# statue,confront #officialEntityPerson# about #_topic#,steal the #teaserCardSet# godbook]#_act#"
 - "teach #_them# how to win the #deck# matchup"
 - "[_what:fix MTGO so that it works properly,fix the shuffler,fix the launch problems with MTG Arena,fix the #constructedFormat# banlist,address the #mtgQuestionablePractice# problem in #popularFormat#]#_what#"
 - "help #_them# [_cardOrSet:#randomAnyCard#,#randomCardSet#][_playset:#realBadCard# playset,playset of #_cardOrSet#,#cardCategory# collection][_forEvent:, for #event#][_prepare:prepare,playtest][_goal:complete #_their# #_playset#,tune #_their# #deckArch# decklist#_forEvent#,#_prepare# for #event#]#_goal#"
