--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "commander": "2.11.0",
     "fs-extra": "4.0.1",
-    "jimp": "0.2.28",
+    "jimp": "^0.9.3",
     "js-yaml": "3.13.1",
     "lodash.merge": "4.6.2",
     "mastodon-api": "1.3.0",
