--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
   },
   "dependencies": {
     "commander": "2.11.0",
+    "cryptiles": "^4.1.3",
     "fs-extra": "4.0.1",
     "jimp": "^0.9.3",
     "js-yaml": "3.13.1",
     "lodash.merge": "4.6.2",
-    "mastodon-api": "1.3.0",
+    "mastodon-api": "^1.3.0",
     "request": "2.81.0",
-    "svg2png": "4.1.1",
+    "svg2png": "^4.1.1",
     "twit": "2.2.9",
-    "webshot": "0.18.0"
+    "webshot": "^0.18.0"
   },
   "devDependencies": {
     "co": "4.6.0",
     "eslint": "4.2.0",
     "fast-deep-equal": "1.0.0",
-    "gulp": "3.9.1",
+    "gulp": "^4.0.2",
     "gulp-debug": "3.1.0",
     "gulp-eslint": "4.0.0",
     "gulp-jsonlint": "1.2.0",
