--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-yaml": "3.13.1",
     "lodash.merge": "4.6.2",
     "mastodon-api": "^1.3.0",
+    "phantomjs-prebuilt": "^2.1.16",
     "request": "2.81.0",
     "svg2png": "^4.1.1",
     "twit": "2.2.9",
